--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <html>
 
   <head>
-    <h2>hello <h2>
+    <img src="WebBanner2023.png" alt="Banner" width="600" height="200"
+      <h1><b>ENG0018 Computer Laboratory 2025/26</b><h1>
+    <h2>Student URN: 6922716</h2
     </head>
     
 </html>
