--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <h1><b>ENG0018 Computer Laboratory 2025/26</b><h1>
     <h2>Student URN: 6922716</h2
     <hr>
-        <h2 style=”font-family:calibri:”><b>Conference paper: phys topic </b></h2>
+        <h2 style=”font-family:calibri:”><b>Conference paper: Time dilation and length contraction </b></h2>
         <hr>
         <!style for tables>
         <style>
