Fix minor wording in time dilation explanation

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ The mathematical principle of relativity lies within the Lorentz transformation 
     <p class="ex1">
         <pre>
 Time Dilation can be hard to visualise so sometimes a thought experiment can help us. Imagine a  "light clock" consisting of two parallel mirrors with a photon bouncing vertically between them. Each complete bounce represents one "tick." Now imagine this clock moving horizontally at a speed close to the speed of light. To a stationary observer, the photon must travel a longer, more diagonal path between ticks compared to the vertical path seen by somebody moving with the clock.
-From the stationary perspective of this thought experiment, the photon travels farther at the same constant speed of light, requiring more time per tick. Thus, the moving clock appears to tick slower therefore demonstrating time dilation. At 87% of light speed, time dilates by a factor of 2. At 99.5% of light speed, time dilates by a factor of 10. For astronauts traveling at these velocities, years can pass on Earth while they experience only months, a phenomenon with substantial implications for future interstellar travel(Griffiths, 2008).
+From the stationary perspective of this thought experiment, the photon travels further at the same constant speed of light, requiring more time per tick. Thus, the moving clock appears to tick slower therefore demonstrating time dilation. At 87% of light speed, time dilates by a factor of 2. At 99.5% of light speed, time dilates by a factor of 10. For astronauts traveling at these velocities, years can pass on Earth while they experience only months, a phenomenon with substantial implications for future interstellar travel(Griffiths, 2008).
         </pre>
     </p>
     
