--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
     <!-- JavaScript for Time Stamp (from H3) -->
     <script>
         async function getLastUpdatedTime() {
-            const username = 'YOUR_GITHUB_USERNAME';
-            const repo = 'YOUR_REPOSITORY_NAME';
+            const username = 'FEPSFY6922716';
+            const repo = 'FY6922716';
             const url = `https://api.github.com/repos/${username}/${repo}/commits`;
             
             try {
