--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
 table {
-    font-family: arial, sans-serif;
+    font-family: Times new roman, sans-serif;
     border-collapse: collapse;
     width: 80%;
     margin: 20px 0;
@@ -89,7 +89,7 @@ Inside this article, the abstract concepts of time dilation and length contracti
 <h3 id="Introduction">Introduction: Why Einstein's Theories Still Matter Today</h3>
 <p class="ex1">
 <pre id="Introduction_InText">
-The theories that Albert Einstein wrote in 1905 of special relativity fundamentally reshaped our understanding of space, time and motion. Whilst his theories were often perceived as abstract concepts most commonly referring to black holes with very little practical relevance, time dilation and length contract have evolved from theoretical curiosity to essential components of our technology. These relativistic effects explain why our GPS satellites require daily adjustments, how particle accelerators such as the Large Hadron Collider at CERN can function and even explaining why magnets work revealing electromagnetism as a relativistic phenomena (<a href="#ref3">Purcell & Morin, 2013</a>).
+The theories that Albert Einstein wrote in 1905 of special relativity fundamentally reshaped our understanding of space, time and motion. Whilst his theories were often perceived as abstract concepts most commonly referring to black holes with very little practical relevance, time dilation and length contract have evolved from theoretical curiosity to essentials of our technology. These relativistic effects explain why our GPS satellites require daily adjustments, how particle accelerators such as the Large Hadron Collider at CERN can function and even explaining why magnets work revealing electromagnetism as a relativistic phenomena (<a href="#ref3">Purcell & Morin, 2013</a>).
 
 These concepts are detrimental to the world of physics as they challenge the Newtonian assumptions about an absolute, universal time and distances that are thought to be fixed. In a world where the use of technology is becoming increasingly prevalent, and satellite communications and high-speed particle research are on the rise, outruling relativity leads to many drastic errors.(<a href="#ref4">Hafele & Keating, 1972</a>).
 </pre>
@@ -108,7 +108,7 @@ The mathematical principle of relativity lies within the Lorentz transformation 
 <p class="ex1">
 <pre id="Dilation_InText">
 Time Dilation can be hard to visualise so sometimes a thought experiment can help us. Imagine a "light clock" consisting of two parallel mirrors with a photon bouncing vertically between them. Each complete bounce represents one "tick." Now imagine this clock moving horizontally at a speed close to the speed of light. To a stationary observer, the photon must travel a longer, more diagonal path between ticks compared to the vertical path seen by somebody moving with the clock.
-From the stationary perspective of this thought experiment, the photon travels farther at the same constant speed of light, requiring more time per tick. Thus, the moving clock appears to tick slower therefore demonstrating time dilation. At 87% of light speed, time dilates by a factor of 2. At 99.5% of light speed, time dilates by a factor of 10. For astronauts traveling at these velocities, years can pass on Earth while they experience only months, a phenomenon with substantial implications for future interstellar travel(<a href="#ref6">Griffiths, 2008</a>).
+From the stationary perspective of this thought experiment, the photon travels further at the same constant speed of light, requiring more time per tick. So, the moving clock appears to tick slower demonstrating time dilation. At 87% of light speed, time dilates by a factor of 2. At 99.5% of light speed, time dilates by a factor of 10. For astronauts traveling at these velocities, years can pass on Earth while they experience only months, a phenomenon with substantial implications for future interstellar travel(<a href="#ref6">Griffiths, 2008</a>).
 </pre>
 </p>
 
