Fix font-family declaration in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
 table {
-    font-family: Times new roman, sans-serif;
+    font-family: Times new roman, Times new roman;
     border-collapse: collapse;
     width: 80%;
     margin: 20px 0;
