--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Additionally, another example of technology which relies on Einstein's relativis
 </tr>
 </table>
 
-<p><em>Table 1: Summary of relativistic effects in modern technology (Compiled by author from multiple sources including <a href="#ref2">Ashby, 2003</a>, <a href="#ref7">CERN, 2020</a> and <a href="#ref3">Purcell & Morin, 2013</a>).</em></p>
+<p><em>Table 1: Summary of relativistic effects in modern technology (Compiled from multiple sources including <a href="#ref2">Ashby, 2003</a>, <a href="#ref7">CERN, 2020</a> and <a href="#ref3">Purcell & Morin, 2013</a>).</em></p>
 
 <hr>
 
@@ -190,9 +190,6 @@ Additionally, another example of technology which relies on Einstein's relativis
 6. <a id="ref6" href="https://doi.org/10.1002/9783527618460">Griffiths, D. J. (2008). Introduction to Elementary Particles (2nd ed.). Wiley-VCH.</a>
 
 7. <a id="ref7" href="https://doi.org/10.5281/zenodo.4009171">European Organization for Nuclear Research (CERN). (2020). The Large Hadron Collider: A Marvel of Technology. CERN Publications.</a>
-
-8. <a id="ref8" href="#Applications">Author. (2025). Table 1: Summary of relativistic effects in modern technology. In Time Dilation and Length Contraction: How Cosmic Phenomena Influence Everyday Life. University of Surrey.</a>
-</pre>
 </p>
 
 <!-- Time Stamp from H3 Worksheet -->
