--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ table {
 }
 
 td, th {
-    border: 1px solid #dddddd;
+    border: 10px solid #000080;
     text-align: left;
-    padding: 20px;
+    padding: 200px;
 }
 
 tr:nth-child(even) {
@@ -38,14 +38,14 @@ hr {
 </style>
 </head>
 
-<body style="background-color:#FFFFFF;margin-left:50px;">
+<body style="background-color:#FFFFFF;margin-left:20px;">
 
 <img src="WebBanner2025.png" alt="Banner" width="1200" height="300">
 <h1><b>ENG0018 Computer Laboratory 2025/26</b></h1>
 <h2>Student URN: 6922716</h2>
 <hr>
 
-<h2 style="font-family:calibri;"><b>Conference paper: Time Dilation and Length Contraction: How Cosmic Phenomena Influence Everyday Life</b></h2>
+<h2 style="font-family:Times new roman;"><b>Conference paper: Time Dilation and Length Contraction: How Cosmic Phenomena Influence Everyday Life</b></h2>
 
 <table>
 <tr>
