--- a/index.html
+++ b/index.html
@@ -34,11 +34,17 @@ h3 {
 
 hr {
     border: 1px solid #002147;
+}body {
+    background-color: #FFFFFF;
+    margin: 50px auto;      
+    max-width: 1200px;     
+    font-family: Times new roman, Times new roman;
+    line-height: 1.6;
 }
 </style>
 </head>
 
-<body style="background-color:#FFFFFF;margin-left:20px;">
+<body >
 
 <img src="WebBanner2025.png" alt="Banner" width="1200" height="300">
 <h1><b>ENG0018 Computer Laboratory 2025/26</b></h1>
