Update body styles in index.html

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@ h3 {
 
 hr {
     border: 1px solid #002147;
-}body {
-    background-color: #FFFFFF;
-    margin: 20px auto;      
-    max-width: 600px;     
-    font-family: Times new roman, Times new roman;
-    line-height: 1.6;
 }
 </style>
 </head>
 
-<body >
+<body {
+    background-color: #FFFFFF;
+    margin: 50px auto;      /* Centers page horizontally */
+    max-width: 1200px;      /* Limits total page width */
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+} >
 
 <img src="WebBanner2025.png" alt="Banner" width="1200" height="300">
 <h1><b>ENG0018 Computer Laboratory 2025/26</b></h1>
