Fix body tag style in index.html

--- a/index.html
+++ b/index.html
@@ -38,13 +38,7 @@ hr {
 </style>
 </head>
 
-<body {
-    background-color: #FFFFFF;
-    margin: 50px auto;      /* Centers page horizontally */
-    max-width: 1200px;      /* Limits total page width */
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-} >
+<body style="background-color:#FFFFFF;margin-left:20px;" >
 
 <img src="WebBanner2025.png" alt="Banner" width="1200" height="300">
 <h1><b>ENG0018 Computer Laboratory 2025/26</b></h1>
