Update font family and table border styles

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
 table {
-    font-family: Times new roman, Times new roman;
+    font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 80%;
     margin: 20px 0;
 }
 
 td, th {
-    border: 1px solid #000080;
+    border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
 }
@@ -38,7 +38,8 @@ hr {
 </style>
 </head>
 
-<body style="background-color:#FFFFFF;margin-left:40px;">
+<body style="background-color:#FFFFFF;margin-left:50px;">
+
 
 <img src="WebBanner2025.png" alt="Banner" width="1200" height="300">
 <h1><b>ENG0018 Computer Laboratory 2025/26</b></h1>
