--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Time Dilation and Length Contraction: Relativity in Everyday Life</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
 table {
     font-family: arial, sans-serif;
@@ -39,6 +40,7 @@ hr {
 </head>
 
 <body style="background-color:#FFFFFF;margin-left:50px;">
+
 
 
 <img src="WebBanner2025.png" alt="Banner" width="1200" height="300">
