--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 80%;
-    margin: 20px 0;
+    width: 70%;
+    margin: 10px 0;
 }
 
 td, th {
@@ -91,9 +91,14 @@ Inside this article, the abstract concepts of time dilation and length contracti
 <h3 id="Introduction">Introduction: Why Einstein's Theories Still Matter Today</h3>
 <p class="ex1">
 <pre id="Introduction_InText">
-The theories that Albert Einstein wrote in 1905 of special relativity fundamentally reshaped our understanding of space, time and motion. Whilst his theories were often perceived as abstract concepts most commonly referring to black holes with very little practical relevance, time dilation and length contract have evolved from theoretical curiosity to essentials of our technology. These relativistic effects explain why our GPS satellites require daily adjustments, how particle accelerators such as the Large Hadron Collider at CERN can function and even explaining why magnets work revealing electromagnetism as a relativistic phenomena (<a href="#ref3">Purcell & Morin, 2013</a>).
+The theories that Albert Einstein wrote in 1905 of special relativity fundamentally reshaped our understanding of space, time and motion.
+Whilst his theories were often perceived as abstract concepts most commonly referring to black holes with very little practical relevance,
+time dilation and length contract have evolved from theoretical curiosity to essentials of our technology.
+These relativistic effects explain why our GPS satellites require daily adjustments, how particle accelerators such as the Large Hadron Collider at CERN can function and even explaining why magnets work revealing electromagnetism as a relativistic phenomena (<a href="#ref3">Purcell & Morin, 2013</a>).
 
-These concepts are detrimental to the world of physics as they challenge the Newtonian assumptions about an absolute, universal time and distances that are thought to be fixed. In a world where the use of technology is becoming increasingly prevalent, and satellite communications and high-speed particle research are on the rise, outruling relativity leads to many drastic errors.(<a href="#ref4">Hafele & Keating, 1972</a>).
+These concepts are detrimental to the world of physics as they challenge the Newtonian assumptions about an absolute, universal time and distances that are thought to be fixed.
+In a world where the use of technology is becoming increasingly prevalent, and satellite communications and high-speed particle research are on the rise, outruling relativity leads
+to many drastic errors.(<a href="#ref4">Hafele & Keating, 1972</a>).
 </pre>
 </p>
 
