Correct introduction text formatting in index.html
Fixed formatting of the introduction text in the HTML.

--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@ Inside this article, the abstract concepts of time dilation and length contracti
 
 <h3 id="Introduction">Introduction: Why Einstein's Theories Still Matter Today</h3>
 <p class="ex1">
-<pre id="Introduction_InText">
-The theories that Albert Einstein wrote in 1905 of special relativity fundamentally reshaped our understanding of space, time and motion.
+<pre id="Introduction_InText">The theories that Albert Einstein wrote in 1905 of special relativity fundamentally reshaped our understanding of space, time and motion.
 Whilst his theories were often perceived as abstract concepts most commonly referring to black holes with very little practical relevance,
 time dilation and length contract have evolved from theoretical curiosity to essentials of our technology.
 These relativistic effects explain why our GPS satellites require daily adjustments, how particle accelerators such as the Large Hadron Collider at CERN can function and even explaining why magnets work revealing electromagnetism as a relativistic phenomena (<a href="#ref3">Purcell & Morin, 2013</a>).
