--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ h1, h2 {
 </table>
 <hr>
 <h3 id="Abstract">Abstract</h3>
-<p id="Abstract_InText">
+<p>
 Inside this article, the abstract concepts of time dilation and length contraction from Einstein's theory of special relativity are explored, where their many different applications are demonstrated not only in fundamental physics but our modern technology today. Whilst Einstein's relativistic theories are only observed at speeds approaching light velocity (approximately 2.998 x 10^8 ms^-1), the implications of special relativity are ingrained into our daily lives through particle physics, global positioning systems and our own understanding of electromagnetism. Through different simple thought experiments, we can visualize how time slows and lengths contract for objects in rapid motion, displaying a universe that is much more intertwined than classical physics suggests. This discussion further highlights how relativity influences electromagnetic forces, whilst challenging our initial notions of what we know about space and time in order to provide a clear display of its necessity to our technology (<a href="#ref1">Einstein, 1905</a>).
 </p>
 <h3 id="Introduction">Introduction: Why Einstein's Theories Still Matter Today</h3>
@@ -146,85 +146,102 @@ The GPS otherwise known as Global positioning system, is one of our most common 
 <h3 id="References">References</h3>
 <p>
 1. <a id="ref1" href="https://doi.org/10.1002/andp.19053221004">Einstein, A. (1905). On the Electrodynamics of Moving Bodies. Annalen der Physik, 17(10), 891-921.</a>
-
 2. <a id="ref2" href="https://doi.org/10.12942/lrr-2003-1">Ashby, N. (2003). Relativity in the Global Positioning System. Living Reviews in Relativity, 6(1), 1-42.</a>
-
 3. <a id="ref3" href="https://doi.org/10.1017/CBO9781139005043">Purcell, E. M. & Morin, D. J. (2013). Electricity and Magnetism (3rd ed.). Cambridge University Press.</a>
-
 4. <a id="ref4" href="https://doi.org/10.1126/science.177.4044.166">Hafele, J. C. & Keating, R. E. (1972). Around-the-World Atomic Clocks: Predicted Relativistic Time Gains. Science, 177(4044), 166-168.</a>
-
 5. <a id="ref5" href="https://doi.org/10.1119/1.1974297">Resnick, R. (1968). Introduction to Special Relativity. Wiley & Sons.</a>
-
 6. <a id="ref6" href="https://doi.org/10.1002/9783527618460">Griffiths, D. J. (2008). Introduction to Elementary Particles (2nd ed.). Wiley-VCH.</a>
-
 7. <a id="ref7" href="https://doi.org/10.5281/zenodo.4009171">European Organization for Nuclear Research (CERN). (2020). The Large Hadron Collider: A Marvel of Technology. CERN Publications.</a>
 </p>
-<!-- Time Stamp from H3 Worksheet -->
+ <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- ////////////////////////////// Adding last update ////////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+    <!-- Last commit time display -->
 <div id="last-updated">Loading last update time...</div>
+<!-- Verify Button -->
 <button onclick="verifyLastUpdatedTime()" style="display: block; margin: 10px auto; padding: 8px 16px;">
-Verify Last Modified Time
+    Verify Last Modified Time
 </button>
 <script>
-async function getLastUpdatedTime() {
-const username = 'FEPSFY6922716';
-const repo = 'FY6922716';
-const url = `https://api.github.com/repos/${username}/${repo}/commits`;
-try {
-const response = await fetch(url, {
-method: 'GET',
-headers: {
-'Accept': 'application/vnd.github.v3+json',
-}
-});
-if (!response.ok) {
-throw new Error(`Error fetching data: ${response.status} - ${response.statusText}`);
-}
-const commits = await response.json();
-if (commits && commits.length > 0) {
-const lastCommitDate = new Date(commits[0].commit.committer.date);
-document.getElementById('last-updated').innerText = `Last Modified Time: ${lastCommitDate.toLocaleString()}`;
-} else {
-document.getElementById('last-updated').innerText = 'No commits found in the repository.';
-}
-} catch (error) {
-console.error('Error fetching the last updated time:', error);
-document.getElementById('last-updated').innerText = 'Error fetching update time. Please check the repository details.';
-}
-}
-async function verifyLastUpdatedTime() {
-document.getElementById('last-updated').innerText = 'Verifying...';
-await getLastUpdatedTime();
-alert("Last modified time has been successfully verified from GitHub API.");
-}
-window.onload = getLastUpdatedTime;
+    async function getLastUpdatedTime() {
+        const username = 'FEPSFY6922716';
+        const repo = 'FY6922716';
+      
+        const url = `https://api.github.com/repos/${username}/${repo}/commits`;
+        try {
+            const response = await fetch(url, {
+                method: 'GET',
+                headers: {
+                    'Accept': 'application/vnd.github.v3+json',
+                }
+            });
+            if (!response.ok) {
+                throw new Error(`Error fetching data: ${response.status} - ${response.statusText}`);
+            }
+            const commits = await response.json();
+            if (commits && commits.length > 0) {
+                const lastCommitDate = new Date(commits[0].commit.committer.date);
+              
+                // Displaying the time on load
+                document.getElementById('last-updated').innerText = `Last Modified Time: ${lastCommitDate.toLocaleString()}`;
+            } else {
+                document.getElementById('last-updated').innerText = 'No commits found in the repository.';
+            }
+        } catch (error) {
+            console.error('Error fetching the last updated time:', error);
+            document.getElementById('last-updated').innerText = 'Error fetching update time. Please check the repository details.';
+        }
+    }
+    // Function to verify the last update time by re-fetching it from the API
+    async function verifyLastUpdatedTime() {
+        document.getElementById('last-updated').innerText = 'Verifying...';
+        await getLastUpdatedTime();
+        alert("Last modified time has been successfully verified from GitHub API.");
+    }
+    // Initial load to display the time on page load
+    window.onload = getLastUpdatedTime;
 </script>
-<!-- Word Count from H3 Worksheet -->
+ <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- ////////////////////////////// Word count function ////////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+<!-- Placeholder for total word count -->
 <p id="totalWordCount"></p>
 <hr>
 <script>
-function displayWordCount(sectionId) {
-const text = document.getElementById(sectionId).textContent;
-const wordArray = text.trim().split(/\s+/);
-const wordCount = wordArray.length;
-return wordCount;
-}
-function displayTotalWordCount() {
-const IntroductionCount = displayWordCount("Introduction_InText");
-const PrinciplesCount = displayWordCount("Principles_InText");
-const DilationCount = displayWordCount("Dilation_InText");
-const ContractionCount = displayWordCount("Contraction_InText");
-const AnalysisCount = displayWordCount("Analysis_InText");
-const ApplicationsCount = displayWordCount("Applications_InText");
-const totalWordCount = IntroductionCount + PrinciplesCount + DilationCount + ContractionCount + AnalysisCount + ApplicationsCount;
-document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
-}
-window.onload = function() {
-getLastUpdatedTime();
-displayTotalWordCount();
-};
+  // Function to calculate and display word count for a specified section
+  function displayWordCount(sectionId, outputId) {
+    // Get the text content from the specified section
+    const text = document.getElementById(sectionId).textContent;
+    // Split text into words based on spaces and filter out any empty strings
+    const wordArray = text.trim().split(/\s+/);
+    // Count the words
+    const wordCount = wordArray.length;
+    // Return the word count for summing purposes
+    return wordCount;
+  }
+  // Function to calculate and display total word count from selected sections
+  function displayTotalWordCount() {
+    // Calculate word count for each section and accumulate the total
+    const IntroductionCount = displayWordCount("Introduction_InText");
+    const PrinciplesCount = displayWordCount("Principles_InText");
+    const DilationCount = displayWordCount("Dilation_InText");
+    const ContractionCount = displayWordCount("Contraction_InText");
+    const AnalysisCount = displayWordCount("Analysis_InText");
+    const ApplicationsCount = displayWordCount("Applications_InText");
+    // Calculate the sum of all selected sections
+    const totalWordCount = IntroductionCount + PrinciplesCount + DilationCount + ContractionCount + AnalysisCount + ApplicationsCount;
+    // Display the total word count
+    document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
+  }
+  // Run the function for specific sections and display total count when the page loads
+  window.onload = function() {
+    getLastUpdatedTime();
+    displayTotalWordCount();
+  };
 </script>
 
 </div>
 
 </body>
 </html>
+
