Add video element to index.html

--- a/index.html
+++ b/index.html
@@ -235,6 +235,10 @@ The GPS otherwise known as Global positioning system, is one of our most common 
   };
 </script>
 
+<video src="presentation.mp4" width="800" height="450" controls>
+</video>
+  
+  
 </div>
 
 </body>
