Fix video tag formatting in index.html

--- a/index.html
+++ b/index.html
@@ -233,10 +233,9 @@ The GPS otherwise known as Global positioning system, is one of our most common 
   };
 </script>
 
-<video src="conference powerpoint2.mp4" width="800" height="450" controls>
-
+  <video src="conference powerpoint2.mp4" width="800" height="450" controls>
+    Your browser does not support the video tag.
 </video>
-  
   
 </div>
 
