--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ The GPS otherwise known as Global positioning system, is one of our most common 
 <td>Microsecond trading disadvantages</td>
 </tr>
 </table>
-<p><em>Table 1: Summary of relativistic effects in modern technology (Compiled from multiple sources including <a href="#ref2">Ashby, 2003</a>, <a href="#ref7">CERN, 2020</a> and <a href="#ref3">Purcell & Morin, 2013</a>).</em></p>
+<p><em>Table 1: Summary of relativistic effects in technology (Compiled from multiple sources including <a href="#ref2">Ashby, 2003</a>, <a href="#ref7">CERN, 2020</a> and <a href="#ref3">Purcell & Morin, 2013</a>).</em></p>
 <hr>
 <h3 id="References">References</h3>
 <p>
